test/arrays/cast/cast-to-string-error.chpl
const x: [1..10] int;
writeln(x:string);
